Fixed Dark Mode Readability

--- a/assets/browser.css
+++ b/assets/browser.css
@@ -299,3 +299,12 @@ main > div._3xzA16lK /* profile page */ section > div > div > div > div > div /*
 .Fe7ul3Lt {
     font-size: 17px !important;
 }
+
+._2WpbeAAU ._24u5-vsm {
+    width: 90% !important;
+}
+
+._1s7qNPIc {
+    box-shadow: none !important;
+    border-bottom: 1px solid #e1e8ed !important;
+}
